[gd_scene load_steps=15 format=2]

[ext_resource path="res://Characters/Saoirse/Saoirse.gd" type="Script" id=1]
[ext_resource path="res://Characters/Saoirse/Torch.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Saoirse/FacingDirectionManager.gd" type="Script" id=4]
[ext_resource path="res://Shaders/Light.tres" type="Material" id=5]
[ext_resource path="res://Audio/Sfx.tscn" type="PackedScene" id=7]
[ext_resource path="res://Characters/Saoirse/Sprites/Saoirse Full Animation.png" type="Texture" id=8]
[ext_resource path="res://Characters/Saoirse/StateMachine/StateMachine.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.3894
height = 34.0986

[sub_resource type="Animation" id=7]
resource_name = "walk_back"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footsteps"
}, {
"args": [  ],
"method": "play_footsteps"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_forward"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footsteps"
}, {
"args": [  ],
"method": "play_footsteps"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footsteps"
}, {
"args": [  ],
"method": "play_footsteps"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk_right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footsteps"
}, {
"args": [  ],
"method": "play_footsteps"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk_up_left"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footsteps"
}, {
"args": [  ],
"method": "play_footsteps"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_up_right"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footsteps"
}, {
"args": [  ],
"method": "play_footsteps"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17, 18 ]
}

[node name="Saoirse" type="KinematicBody2D" groups=[
"Saoirse",
"actors",
"actors_demon_eye",
"actors_intro",
]]
z_index = 1
collision_mask = 15
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
hframes = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.42828, 0.998269 )
shape = SubResource( 1 )

[node name="ShotSpawner" type="Node2D" parent="."]

[node name="StateMachine" parent="." instance=ExtResource( 10 )]

[node name="Light2D" parent="." instance=ExtResource( 3 )]
material = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="FacingDirectionManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="Sfx" parent="." instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk_back = SubResource( 7 )
anims/walk_forward = SubResource( 8 )
anims/walk_left = SubResource( 9 )
anims/walk_right = SubResource( 10 )
anims/walk_up_left = SubResource( 12 )
anims/walk_up_right = SubResource( 11 )
